2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_collected):
	  Don't operate on empty text buffers. Strip newlines and
	  tabs only from the end of the text, but leave them intact
	  in the middle. Fix typo in gtk-doc description.

2005-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstplaybasebin.c:
	* gst/playback/gstplaybin.c: (handoff):
	  Make sure the video frame buffer we return to apps via the
	  "frame" property always has caps set on it. Modify
	  _gst_gvalue_set_object() macro to handle NULL objects
	  gracefully too.

2005-12-14  Stefan Kost  <ensonic@users.sf.net>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	(gst_audio_test_src_class_init), (gst_audio_test_src_init),
	(gst_audio_test_src_setcaps), (gst_audio_test_src_src_query),
	(gst_audio_test_src_do_seek), (gst_audio_test_src_is_seekable),
	(gst_audio_test_src_create):
	* gst/audiotestsrc/gstaudiotestsrc.h:
          Adjust to some recent api changes and add wtays new cool seeking
          capabillities

2005-12-14  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/alsa/Makefile.am:
	* ext/alsa/gstalsadeviceprobe.c:
	* ext/alsa/gstalsadeviceprobe.h:
	  Helper functions to add device probing via the GstPropertyProbe
	  interface to a class.

	* ext/alsa/gstalsamixer.h:
	  Comment out GST_ALSA_MIXER, it returns a struct that's not
	  used.

	* ext/alsa/gstalsamixer.c: (gst_alsa_mixer_open):
	  Add some debug info. 

	* ext/alsa/gstalsamixerelement.c:
	(gst_alsa_mixer_element_interface_supported),
	(gst_implements_interface_init),
	(gst_alsa_mixer_element_init_interfaces),
	(gst_alsa_mixer_element_class_init),
	(gst_alsa_mixer_element_finalize), (gst_alsa_mixer_element_init),
	(gst_alsa_mixer_element_set_property),
	(gst_alsa_mixer_element_get_property),
	(gst_alsa_mixer_element_change_state):
	* ext/alsa/gstalsamixerelement.h:
	  Add 'device' and 'device-name' properties. Add GstPropertyProbe